# fuzzy-classifier-adaptative-difficulty

./: .gitignore  pyproject.toml
src/data/sheets/: lunar_data.csv  scores-episode-1.csv  scores-episode-2.csv  scores-episode-3.csv
src/fuzzy_classifier/: classifier.py  generate_rule_classifier.py  train_data.py
src/lunar_lander_score/: main.py
src/notebooks/: clasificadordifuso.ipynb
