[project]
name = "lunar-lander-score"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabian Palmera",email = "fapalmera@cenditel.gob.ve"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "inferfuzzy (>=0.1.4,<0.2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "lunar_lander_score", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
